# Incubator-rust-example

./: README.md
0_basics/: Cargo.toml
0_basics/src/: libjeka_test.rlib  main.rs
1_key_concepts/1_1_type_safety/: Cargo.toml
1_key_concepts/1_1_type_safety/src/: main.rs
1_key_concepts/1_2_reference_counting/: file.txt  test_write.txt
1_key_concepts/1_2_reference_counting/src/: main.rs
1_key_concepts/1_3_interior_mutability/src/: main.rs
1_key_concepts/1_4_clone_on_write/src/: main.rs
1_key_concepts/1_5_default_values/src/: main.rs
1_key_concepts/1_6_dereferencing/src/: main.rs
1_key_concepts/1_7_static_and_dynamic_dispatch/: Cargo.toml
1_key_concepts/1_7_static_and_dynamic_dispatch/src/: main.rs
1_key_concepts/1_8_thread_safety/: Cargo.toml
1_key_concepts/1_8_thread_safety/Text/: big_text.txt  path_1.txt  path_2.txt  path_3.txt  rust.txt
1_key_concepts/1_8_thread_safety/src/: main.rs
2_primitives_and_tools/2_10_environment_variables/: .env  Cargo.toml
2_primitives_and_tools/2_10_environment_variables/src/: main.rs
2_primitives_and_tools/2_11_configuration/: .env  Cargo.toml  Settings.toml  Settings_test.toml  Settings_test2.toml  config.toml
2_primitives_and_tools/2_11_configuration/src/: main.rs
2_primitives_and_tools/2_12_threads_synchronization_and_parallelism/: Cargo.toml
2_primitives_and_tools/2_12_threads_synchronization_and_parallelism/mythread/: Cargo.toml
2_primitives_and_tools/2_12_threads_synchronization_and_parallelism/mythread/src/: lib.rs  lib_old.rs
2_primitives_and_tools/2_12_threads_synchronization_and_parallelism/src/: main.rs
2_primitives_and_tools/2_13_futures_and_async_io/: Cargo.toml
2_primitives_and_tools/2_13_futures_and_async_io/src/: main.rs
2_primitives_and_tools/2_13_new_futures/: Cargo.toml
2_primitives_and_tools/2_13_new_futures/src/: main.rs
2_primitives_and_tools/2_13_tokio/: Cargo.toml  download
2_primitives_and_tools/2_13_tokio/src/: main.rs
2_primitives_and_tools/2_14_actors/: Cargo.toml
2_primitives_and_tools/2_14_actors/src/: main.rs
2_primitives_and_tools/2_15_actix_web_r2d2/: Cargo.toml
2_primitives_and_tools/2_15_actix_web_r2d2/src/: main.rs
2_primitives_and_tools/2_1_date_and_time/: Cargo.toml
2_primitives_and_tools/2_1_date_and_time/src/: main.rs
2_primitives_and_tools/2_2_regular_expressions/: Cargo.toml
2_primitives_and_tools/2_2_regular_expressions/src/: main.rs
2_primitives_and_tools/2_3_bitmasks/: Cargo.toml
2_primitives_and_tools/2_3_bitmasks/src/: main.rs
2_primitives_and_tools/2_4_collections/: Cargo.toml
2_primitives_and_tools/2_4_collections/src/: main.rs
2_primitives_and_tools/2_5_encoding_and_serialization/: Cargo.toml
2_primitives_and_tools/2_5_encoding_and_serialization/src/: main.rs
2_primitives_and_tools/2_6_randomness/: Cargo.toml
2_primitives_and_tools/2_6_randomness/src/: main.rs
2_primitives_and_tools/2_7_cryptography/: Cargo.toml
2_primitives_and_tools/2_7_cryptography/src/: main.rs
2_primitives_and_tools/2_8_logging/: Cargo.toml
2_primitives_and_tools/2_8_logging/src/: main.rs
2_primitives_and_tools/2_9_command_line_arguments/: Cargo.toml  out.txt
2_primitives_and_tools/2_9_command_line_arguments/src/: main.rs
