[package]
name = "actors"
version = "0.1.0"


[dependencies]
actix = "0.7"
futures = "0.1"

tokio = "0.1.7"
tokio-io = "0.1"
tokio-codec = "0.1"
tokio-executor = "0.1"
tokio-reactor = "0.1"
tokio-tcp = "0.1"
tokio-timer = "0.2"



crossbeam = "0.3.2"
crossbeam-channel = "0.2.6"
rayon = "1.0.2"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
handlebars = "1.1.0"
chrono = { version = "0.4", features = ["serde"] }
