[package]
name = "r2d2-example"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]

[dependencies]
env_logger = "0.5"

actix = "0.7"
actix-web = "0.7"

futures = "0.1"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

r2d2 = "*"
r2d2_sqlite = "*"
rusqlite = "*"

#r2d2 = "0.8"
postgres = "0.15"
postgres-shared = "0.4"
r2d2_postgres = "0.14.0"
