[package]
name = "cryptography"
version = "0.1.0"

[dependencies]
ring = "0.13.2"
untrusted = "0.6.2"
curve25519-dalek = "^0.18"

blake2 = "0.7"
digest = { version = "0.7", features = ["std"]}

hmac = "0.5"
sha2 = "0.7"
crypto-mac ="0.5.2"
groestl ="0.7.0"
sha3 ="0.7.3"

scrypt = { version = "0.1", default-features = true }
pbkdf2= { version = "0.2", default-features = true }
sha-1 ="0.7"

openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "0.6", features = ["v4"] }
